Fixed alignment issues

--- a/css/main.css
+++ b/css/main.css
@@ -352,7 +352,6 @@ header h2 {
 .port-project {
   width: 100%;
   display: flex;
-  justify-content: center;
   flex-direction: column;
   align-items: center;
 }
